--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vite": "^6.3.1"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "framer-motion": "^12.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
